fix: banner and dropdown sizing and alignment

--- a/assets/scss/_product-page.scss
+++ b/assets/scss/_product-page.scss
@@ -20,13 +20,11 @@
 
     }
 
-
-
-
-
     .product-page__dropdown {
-
-
+      .product-page__sort__label {
+        color: $secondary;
+  
+      }
 
       button {
         font-size: $font-paragraph;
